RESOLVED FIXED302362
REGRESSION (301964@main): When creating a list on sharepoint.microsoft.com, panel turns blank until mouse click
https://bugs.webkit.org/show_bug.cgi?id=302362
Summary REGRESSION (301964@main): When creating a list on sharepoint.microsoft.com, p...
Simon Fraser (smfr)
Reported 2025-11-11 16:27:05 PST
Summary: On sharepoint.microsoft.com, during the creating new list workflow. Webpage turns blank until mouse click Steps: 1. Login into sharepoint.microsoft.com 2. Use New -> list to get into creating list workflow 3. Create from blank -> list 4. Screen turn blank, with a mouse click it will display This is about repaint in iframes which start as `display:none`.
Attachments
Simon Fraser (smfr)
Comment 1 2025-11-11 16:27:15 PST
Simon Fraser (smfr)
Comment 2 2025-11-11 16:35:06 PST
EWS
Comment 3 2025-11-12 09:10:41 PST
Committed 302912@main (318c5002fea3): <https://commits.webkit.org/302912@main> Reviewed commits have been landed. Closing PR #53778 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.