REGRESSION (301964@main): When creating a list on sharepoint.microsoft.com, panel turns blank until mouse click https://bugs.webkit.org/show_bug.cgi?id=302362 rdar://164258690

Reviewed by Alan Baradlay.

We can get stuck in `m_accumulatedRepaintRegion` mode when hitting the `if (!iframeOwnerRenderer)`
clause in `RenderView::flushAccumulatedRepaintRegion()`, which breaks all future repaints in the
iframe. This happens when the iframe starts as `display:none`, for example.

Fix by ensuring that when we early return here, we also clear `m_accumulatedRepaintRegion`.

Test: fast/repaint/iframe-from-display-none-repaint.html
* LayoutTests/fast/repaint/iframe-from-display-none-repaint-expected.html: Added.
* LayoutTests/fast/repaint/iframe-from-display-none-repaint.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/win/TestExpectations:
* Source/WebCore/rendering/RenderView.cpp:
(WebCore::RenderView::flushAccumulatedRepaintRegion const):

Canonical link: https://commits.webkit.org/302912@main